@@ -369,19 +369,19 @@
 				}
 			});
 
-			var image = $('#previewChar img');
-
-			if (image.length != 0) {
-				image.remove();
-			}
-
-			$('#previewChar')
-				.attr('class', 'preloader');
+			$('#previewChar').attr('class', 'preloader').children().remove();
 
 			$('<img />').attr('src', name + '?period=3600' + src).load(function() {
 				$('#previewChar')
 					.removeAttr('class')
 					.append($(this));
+			}).error(function() {
+				$('#previewChar').removeAttr('class').append(
+				<?=
+					CJs::encodeJson(makeMessageBox(false, [['message' => _('Cannot load graph preview image.')]], null,
+						false)->toString()
+					)
+				?>);
 			});
 		});
 
